--- a/src/menuapp/templates/itemHome.html
+++ b/src/menuapp/templates/itemHome.html
@@ -1,8 +1,13 @@
 <a ui-sref='home'>HOME</a>
 <a ui-sref='categories'>Categories</a>  
 
-<div>This is a list of items:</div>
-<div>{{items.name}}</div>
-<item-list items="$ctrl.items"></item-list>
+<item-list></item-list>
+
+ <ul>
+    <li ng-repeat="item in mainList.item.menu_items">
+    {{ item.name }} :
+    {{item.description}}
+  </li>
+  </ul>   
 
 
