--- a/src/menuapp/templates/itemHome.html
+++ b/src/menuapp/templates/itemHome.html
@@ -1,13 +1,10 @@
 <a ui-sref='home'>HOME</a>
 <a ui-sref='categories'>Categories</a>  
 
-<item-list></item-list>
+<item-list items=mainList.items></item-list>
 
- <ul>
-    <li ng-repeat="item in mainList.item.menu_items">
-    {{ item.name }} :
-    {{item.description}}
-  </li>
-  </ul>   
+
+
+
 
 
