--- a/src/menuapp/templates/categoriesHome.html
+++ b/src/menuapp/templates/categoriesHome.html
@@ -1,4 +1,5 @@
 <a ui-sref="home">Home</a> 
+<div>Click a category to view items:</div>
 <categories-list items="mainList.items"></categories-list>
 
 
