--- a/src/menuapp/templates/item.html
+++ b/src/menuapp/templates/item.html
@@ -1,4 +1,4 @@
-<div>list of items:</div>
+<div>Items in selected category:</div>
 <ul>
   <li ng-repeat="item in $ctrl.items.menu_items">
     {{ item.name }}
