--- a/src/menuapp/templates/itemHome.html
+++ b/src/menuapp/templates/itemHome.html
@@ -1,4 +1,4 @@
-<a ui-sref='home'>HOME</a>
+<a ui-sref='home'>Home</a>
 <a ui-sref='categories'>Categories</a>  
 
 <item-list items=mainList.items></item-list>
